@@ -219,6 +219,7 @@
 #define NF_FORCE_ENCRYPTION       0x00400000
 #define NF_DISABLE_ROUTE_POLL     0x00800000
 #define NF_AGENT_OVER_TUNNEL_ONLY 0x01000000
+#define NF_SNMP_SETTINGS_LOCKED   0x02000000
 
 /**
  * Data Collection flags first half of int
